# ocioTools

./: .gitignore  README.md  pyproject.toml  pyproject.toml.bak.poetry2uv  pyproject.uv.toml
ociotools/appleP3/: apple_display_p3_config.ocio
ociotools/blender/: modified_blender_config.ocio
ociotools/scripts/: copyAppleP3.py  copyconfig.py  readocio.py  testapi.py
src/ociotools/asus/: asus_pa32ucxr.ocio
src/ociotools/houdini/: houdini-config-v1.0.0_aces-v1.3_ocio-v2.1.ocio
src/ociotools/scripts/: asusPA32UCXR.py  copyAppleP3config.py  copyDevice.py  copyconfig.py
src/ociotools/winOCIO/: README.txt
winOCIO/: houdini-config-v2.1.0_aces-v1.3_ocio-v2.3.ocio  reference-config-v2.1.0_aces-v1.3_ocio-v2.3.ocio
