[tool.poetry]
name = "ociotools"
version = "0.1.0"
description = ""
authors = ["Suhail <suhailece@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10.10"
opencolorio = "^2.3.2"
pyyaml = "^6.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
